[package]
name = "fetch-library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
mlua = { version = "0.8", features = ["lua54", "vendored", "module"] }
reqwest = { version = "0.11.16", features = ["blocking", "multipart"] }
